# pysimgame

./: .gitignore  README.md  initial_file.py  launcher.py  main.py  parse_model.py  settings.json  setup.cfg  teacup_game.py  test.py
docs/source/: MainLoopFlow.drawio  coding_guidlines.rst  conf.py  future_ideas.rst  index.rst  managers.rst
examples/: README.md
examples/differentcups/: DifferentCups.mdl  DifferentCups.py  test_pysd_parser.py
examples/gui_tests/: test_menu.py  test_toggle_button.py  theme.json
examples/interface/: run.py
examples/menu/: test_menu.py
examples/preypredator/: population.mdl  run.py
examples/teacup/: Teacup.mdl  Teacup.py  test_pysd_parser.py
pysdgame/: __init__.py  game_manager.py  graphs.py  menu.py  model.py  new_game.py  plots.py  pygame_settings.json  regions_display.py  statistics.py  types.py  update_game.py  utils.py
pysdgame/actions/: __init__.py  actions.py  gui.py
pysdgame/events/: __init__.py
pysdgame/themes/: game_menu.json  main_menu.json  menu.json
pysdgame/utils/: __init__.py  create_region_shape.py  directories.py  dynamic_menu.py  gui_utils.py  images.py  logging.py  maths.py  pysdgame_settings.json  pysdgame_settings.py
pysimgame/: __init__.py  __main__.py  game_manager.py  menu.py  model.py  new_game.py  plots.py  regions_display.py  speed.py  statistics.py  types.py  update_game.py
pysimgame/actions/: __init__.py  actions.py  gui.py
pysimgame/arg_parse/: __init__.py
pysimgame/events/: __init__.py
pysimgame/game/: __init__.py
tests/: test_arg_parse.py  test_game.py
trials/: README.md
(+71 files in other folders)
