[metadata]
name = pysdgame
version = 0.1
author = Lionel42
description = View, interact and play with pysd using pygame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lionel42/pysdgame
project_urls =
    Source Code = https://github.com/lionel42/pysdgame
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pygame >= 2.0.0
    pysd >= 1.11.0
    pygame_gui >= 0.6.0
python_requires = >=3.9

[options.packages.find]
include_package_data = False
